# private-web-storage

./: Cargo.toml  Dockerfile  package-lock.json
client/: .gitignore  angular.json  package.json
client/src/: proxy.conf.json  test.ts
client/src/app/: app.module.ts  file.service.ts
client/src/app/file/: file.component.html
client/src/app/files-root/: files-root.component.html  files-root.component.scss  files-root.component.ts
public/: README.md  package-lock.json
public/src/: styles.scss
public/src/app/: app.component.html  file.service.ts
public/src/app/dir/: dir.component.html  dir.component.scss  dir.component.ts
public/src/app/file/: file.component.html  file.component.scss  file.component.ts
public/src/app/files-root/: files-root.component.html  files-root.component.scss  files-root.component.ts
src/: main.rs
src/routes/: add_dir.rs  delete.rs  files.rs  index.rs  mod.rs  upload.rs
