[package]
name = "private-web-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
axum = { version = "0.6.2", features = ["multipart"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs", "cors"] }
urlencoding = "2.1.2"
